# mcp_bpy

./: .gitignore  .pre-commit-config.yaml  DIAGNOSTIC_TOOL.md  MCP_SETUP.md  OPERATOR_GENERATOR_EXAMPLE.md  README.md  STREAMING.md  demo_streaming.py  main.py  mcp_bpy.code-workspace  mcp_config.json  pyproject.toml  task_tracker.md
.github/instructions/: llms-full.instructions.md  mcp_agent_instructions.instructions.md  mcp_python_sdk.instructions.md
.github/workflows/: ci.yml
bpy_mcp/: __init__.py  __main__.py  server.py
operators/: add_cube_operator.py  add_uv_sphere_advanced_operator.py  interactive_tool_operator.py  property_test_operator.py  scale_object_operator.py  test_operator_operator.py
prompts/: addon_development.md  blender_operation.md  debug_traceback.md
tests/: port_scanner.py  quick_test.py  test_auth_scenarios.py  test_blender_connection.py  test_create_bpy_operator.py  test_node_group_info.py  test_phase4_tools.py  test_run_python_tool.py  test_server.py  test_streaming.py
tests/manual/: test_listener.py
