[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["bpy_mcp"]
exclude = [".venv"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "All"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bpy_mcp"]

[project]
name = "mcp-bpy"
version = "0.1.0"
description = "Blender Add-on MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "mcp[cli]>=1.12.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/blender-addon-mcp"
Repository = "https://github.com/yourusername/blender-addon-mcp.git"
Issues = "https://github.com/yourusername/blender-addon-mcp/issues"

[project.scripts]
bpy-mcp = "bpy_mcp.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
